read me updates

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,6 @@
 import astroLogo from "../assets/logoicon.jpg";
 import Social from "./Social.astro";
 import { dashLink, SC_FB_TAG, SC_IG_TAG, SC_TK_TAG } from "../consts";
-
 ---
 
 <div class="nav-container">
@@ -19,7 +18,10 @@ import { dashLink, SC_FB_TAG, SC_IG_TAG, SC_TK_TAG } from "../consts";
 
   <div class="nav-links">
     <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href={dashLink}>Order</a>
+    <a href="/about/">Our Story</a>
+    <a href="/about/">Reviews</a>
+    <a href="/client/">Clients</a>
+
+    <a href={dashLink}>Services</a>
   </div>
 </div>
