--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -9,8 +9,8 @@ import slideDos from "../assets/trestacos.jpeg";
 import slideTres from "../assets/huevos.jpg";
 import Review from "../components/ReviewSection.astro";
 
-const resturantName = "Tortas Ahogadas Mi Barrio";
-const subName = "Estilo Jalisco";
+const resturantName = "Pet's Best Friend";
+const subName = "Treating every pet like family since 2023";
 ---
 
 <div class="banner-image">
@@ -25,8 +25,8 @@ const subName = "Estilo Jalisco";
 </div>
 <main>
   <ImageSlideSection
-    title="Delicious Mexican Food!"
-    description="Explore our amazing dishes with fresh ingredients and authenticate flavors. Satisfy your cravings with some traditional mexican food."
+    title="Doggy Day Care"
+    description="The best place for your furry friends"
   />
   <Review />
   <section class="">
@@ -74,38 +74,7 @@ const subName = "Estilo Jalisco";
   </section>
 </main>
 
-<!-- <div class="">
-  <section class="color-section">
-    <h2 class="section-title">Reviews</h2>
-    <div class="card-container" role="list" aria-label="Review cards">
-      <article
-        class="review-card"
-        role="listitem"
-        tabindex="0"
-        aria-label="Review by John Doe"
-      >
-        <p class="review-text">"Best tortas in town! Highly recommend."</p>
-        <p class="review-author">- John Doe</p>
-        <div class="review-controls">
-          <button type="button">Like</button>
-          <button type="button">Reply</button>
-        </div>
-      </article>
-      <article
-        class="review-card"
-        role="listitem"
-        tabindex="0"
-        aria-label="Review by Jane Smith"
-      >
-        <p class="review-text">"Amazing flavors and great service!"</p>
-        <p class="review-author">- Jane Smith</p>
-        <div class="review-controls">
-          <button type="button">Like</button>
-          <button type="button">Reply</button>
-        </div>
-      </article>
-    </div>
-  </section> -->
+
 
 <script>
   import "../scripts/rev.js";
