fix home page navigation

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@ const address2 = "3355 Santa Rosa Ave., Santa Rosa, CA";
     padding: 1rem 2rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-    background-color: #410333;
+    background-color: #e684cf;
   }
   footer > div {
     display: flex;
