--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,10 +4,11 @@ import Navigation from "./Navigation.astro";
 ---
 
 <header>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
  
   <nav>
     
-    <Hamburger />
+    <!-- <Hamburger /> -->
     
     <Navigation />
   </nav>
