--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,8 +40,9 @@ hr {
   /* max-width: 1000px; */
   margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
   gap: 10px;
   background-color: rgb(255, 255, 255);
 
@@ -53,7 +54,8 @@ hr {
 
 .nav-logo {
   display: flex;
-  align-items: left;
+  justify-content: flex-end;
+  width: 115px; /* match the logo image width */
 }
 
 .nav-logo img {
@@ -84,8 +86,9 @@ hr {
 
 .nav-links {
   display: flex;
-  gap: 20px;
-  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: flex-start;
 }
 
 .nav-links a {
