--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,6 @@
 ---
 import astroLogo from "../assets/logoicon.jpg";
-import { dashLink} from "../consts";
+import { dashLink, SITE_TITLE} from "../consts";
 ---
 <!-- 
 <div class="nav-container">
@@ -68,7 +68,7 @@ import { dashLink} from "../consts";
                 <!-- Logo -->
                 <div class="flex-shrink-0 flex items-center nav-logo-container">
                     <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/041614c9-7f60-4bf3-83d9-a80b19f1d780.png" alt="Company logo with blue and white color scheme showing a rocket icon" class="h-8 w-auto">
-                    <span class="ml-2 text-xl font-bold text-gray-800">AstroSite</span>
+                    <span class="ml-2 text-xl font-bold text-gray-800">{SITE_TITLE}</span>
                 </div>
 
                 <!-- Desktop Navigation -->
