--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Footer Section -->
-    <footer class="bg-pink-300 text-white pt-12 pb-6">
+    <footer class="bg-gray-900 text-white pt-12 pb-6">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between gap-8">
                 
@@ -31,12 +31,12 @@
                 <div class="w-full md:w-1/4">
                     <h3 class="text-lg font-semibold mb-4 text-center md:text-left">Menu</h3>
                     <ul class="space-y-2 flex flex-col items-center md:items-start">
-                        <li><a href="/" class="text-gray-400 hover:text-white transition duration-300">Home</a></li>
-                        <li><a href="/about/" class="text-gray-400 hover:text-white transition duration-300">About Us</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Home</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Our Story</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Clients</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Services</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Portfolio</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Blog</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Careers</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Contact</a></li>
+                        <!-- <li><a href="#" class="text-gray-400 hover:text-white transition duration-300">Careers</a></li> -->
                     </ul>
                 </div>
                 
@@ -94,7 +94,7 @@
             <div class="border-t border-gray-800 mt-12 pt-6">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <p class="text-gray-400 text-center md:text-left text-sm">
-                        © 2023 Company Name. All rights reserved.
+                        © 2025 Sunnyside Dog Daycare Name| All rights reserved.
                     </p>
                     <div class="mt-4 md:mt-0 flex space-x-6">
                         <a href="#" class="text-gray-400 hover:text-white text-sm">Privacy Policy</a>
