--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,9 +18,11 @@
 
 body {
   font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(135deg, #000000, #000000);
-  color: #f5f5f5;
-  line-height: 1.6;
+  /* background: linear-gradient(135deg, #000000, #000000); */
+  /* color: #7f0000; */
+  line-height: 1.6; 
+  background-color: #fcfcfc;
+
 }
 
 .hero-image {
